<resources>
   <string name="app_name">Moloko</string>
   <string name="app_home">Home</string>
   <string name="app_preferences">Settings</string>
   <string name="app_account_preferences">Account Preferences</string>
   <string name="app_tasklists">Lists</string>
   <string name="app_task">Task</string>
   <string name="app_task_edit">Task Edit</string>
   <string name="app_task_edit_multiple">Edit %1$d %2$s</string>
   <string name="app_task_add">New Task</string>
   <string name="app_task_select_multiple">Select tasks (%1$d)</string>
   <string name="app_task_complete">Complete</string>
   <string name="app_task_uncomplete">Incomplete</string>
   <string name="app_task_delete">Delete Task</string>
   <string name="app_task_postpone">Postpone Task</string>
   <string name="app_change_tags">Change tags</string>
   <string name="app_note">Note</string>
   <string name="app_note_multiple">Note (%1$d/%2$d)</string>
   <string name="app_note_edit">Edit Note</string>
   <string name="app_note_add">New Note</string>
   <string name="app_tagcloud">Tags</string>
   <string name="app_contacts">Contacts</string>
   <string name="app_sort_alpha">Task Name</string>
   <string name="app_sort_prio">Priority</string>
   <string name="app_sort_due_date">Due Date</string>
   <string name="app_save">Save changes</string>
   <string name="app_startup">Launching Moloko ...</string>
   <string name="app_rtm_api_key">4070cf4b39d83778df99e7b988539cb7</string>
   <string name="app_rtm_shared_secret">8d263cfe92b542fa</string>
   <string name="app_list_name_inbox">Inbox</string>
   <string name="app_list_name_sent">Sent</string>
   <string name="svc_sync">RTM Synchronization</string>
   <string name="svc_auth">RTM Authentication</string>
   <string name="rec_sync">Moloko Sync-Alarm</string>
   <string name="rec_boot">Moloko boot</string>
   <string name="rtm_full">Remember The Milk</string>
   <string name="rtm_short">RTM</string>
   <string name="g_settings_src_rtm_btn">Take settings from RTM Server</string>
   <string name="g_settings_src_rtm">Loaded from RTM Server</string>
   <string name="g_settings_src_local">Local setting</string>
   <string name="g_no_account">No RTM credentials available</string>
   <string name="moloko_about_info" formatted="false">
      &lt;a href="http://code.google.com/p/moloko/">Moloko&lt;/a> is a Remember The Milk client developed by &lt;a href="mailto:ronny.roehricht@gmail.com">Ronny Röhricht&lt;/a>.
      &lt;br>&lt;br>Version: %1$s&lt;br>&lt;br>
      Special thanks to David Vermeille.&lt;br>&lt;br>
      Moloko is implemented by means of:&lt;br>
                - &lt;a href="http://www.antlr.org">ANTLR&lt;/a> Parser Generator 3.2
         &lt;br>- A modified version of &lt;a href="http://sourceforge.net/projects/rtmjava/">rtmjava&lt;/a> library
         &lt;br>- &lt;a href="http://code.google.com/p/acra/">ACRA&lt;/a> Application Crash Report for Android library
         &lt;br>- &lt;a href="http://code.google.com/p/android-log-collector/">android-log-collector&lt;/a>
         &lt;br>- &lt;a href="http://code.google.com/p/android-wheel/>android-wheel&lt;/a>
         &lt;br>- &lt;a href="http://actionbarsherlock.com/>ActionBarSherlock&lt;/a>
   </string>
   <string name="key_permission">permission</string>
	<string name="key_sync_inverval">sync_interval</string>
	<string name="key_def_list_local">def_list_local</string>
	<string name="key_def_list_sync_with_rtm">def_list_sync_with_rtm</string>
	<string name="key_lang_local">lang_local</string>
   <string name="key_lang_sync_with_rtm">lang_sync_with_rtm</string>
   <string name="key_startup_view">startup_view</string>
   <string name="key_task_sort">task_sort</string>
   <string name="key_notify_due_tasks">notify_due_tasks</string>
   <string name="key_notify_due_tasks_before">notify_due_tasks_before</string>
   <string name="key_notify_due_tasks_ringtone">notify_due_tasks_ringtone</string>
   <string name="key_notify_due_tasks_vibrate">notify_due_tasks_vibrate</string>
   <string name="key_notify_due_tasks_led">notify_due_tasks_led</string>
   <string name="key_notify_permanent">notify_permanent</string>
   <string name="key_notify_permanent_overdue">notify_permanent_overdue</string>
   <string name="key_conn_use_https">conn_use_https</string>
   <string name="key_conn_use_proxy">conn_use_proxy</string>
   <string name="key_conn_proxy_host">conn_proxy_host</string>
   <string name="key_conn_proxy_port">conn_proxy_port</string>
   <string name="key_conn_proxy_user">conn_proxy_user</string>
   <string name="key_conn_proxy_pass">conn_proxy_pass</string>
   <string name="key_notified_account_creation">notified_account_creation</string>
   <string name="time_interval_15min">Every 15 min.</string>
   <string name="time_interval_30min">Every 30 min.</string>
   <string name="time_interval_1h">Every hour</string>
   <string name="time_interval_12h">Every 12 hours</string>
   <string name="time_interval_daily">Once a day</string>
   <string name="time_5min">5 minutes</string>
   <string name="time_15min">15 minutes</string>
   <string name="time_30min">30 minutes</string>
   <string name="time_1h">1 hour</string>
   <string name="time_12h">12 hours</string>
   <string name="time_24h">1 day</string>
      <string name="numeric_date_pattern">%1$s/%2$s</string>
      <string name="numeric_date_format">M/d</string>
      <string name="numeric_date_pattern_year">%1$s/%2$s/%3$s</string>
      <string name="numeric_date_format_year">M/d/yyyy</string>
      <string name="date_with_text_month">%1$s d</string>
      <string name="date_with_text_month_year">%1$s d, yyyy</string>
      <string name="date_with_weekday_text_month">%1$s, %2$s dd</string>
      <string name="date_with_weekday_text_month_year">%1$s, %2$s d, yyyy</string>
      <string name="date_with_time_pattern">%1$s, %2$s</string>
      <string name="time_pattern_12">h:mma</string>
      <string name="time_pattern_24">k:mm</string>
   <string name="phr_please_wait">Please wait</string>
   <string name="phr_now">Now</string>
   <string name="phr_today">Today</string>
   <string name="phr_today_with_date">Today %1$s</string>
   <string name="phr_tomorrow">Tomorrow</string>
   <string name="phr_tomorrow_with_date">Tomorrow the %1$s</string>
   <string name="phr_establish_connection">Establish an Internet connection to continue.</string>
   <string name="phr_open_with_name">Open \'%1$s\'</string>
   <string name="phr_edit_with_name">Edit \'%1$s\'</string>
   <string name="phr_delete_with_name">Delete \'%1$s\'</string>
   <string name="phr_ok">OK</string>
   <string name="phr_close">Close</string>
   <string name="phr_settings">Settings</string>
   <string name="phr_none_f">none</string>
   <string name="phr_none_m">none</string>
   <string name="phr_none_mainly">none</string>
   <string name="phr_nothing">nothing</string>
   <string name="phr_sync">Synchronization</string>
   <string name="phr_do_sync">Synchronize</string>
   <string name="phr_cancel_sync">Cancel synchronization</string>
   <string name="phr_on">On</string>
   <string name="phr_off">Off</string>
   <string name="phr_manuell">Manual</string>
   <string name="phr_password_set">set</string>
   <string name="phr_loading">Loading...</string>
   <string name="phr_edit_dlg_done">Applying changes?</string>
   <string name="phr_edit_dlg_cancel">Cancel editing and lose all changes?</string>
   <string name="err_error">Error</string>
   <string name="err_success">Success</string>
   <string name="err_canceled">Canceled</string>
   <string name="err_saving_preferences">Error saving settings</string>
   <string name="err_not_connected">No connection</string>
   <string name="err_add_account_canceled">Adding a new account has been canceled</string>
   <string name="err_unexpected">If you read this RUN AS QUICKLY AS YOU CAN!</string>
   <string name="err_db_typed">Error during database access of %1$s.</string>
   <string name="err_entity_not_found">The %1$s could not be retrieved from the database.\n\nPlease check if the element exists.</string>
   <string name="err_unsupported_intent_action">The action %1$s is not supported by this activity.</string>
   <string name="err_modify_access_level_read">Moloko has \'Read\' only access to your data.\n\nData you have changed with Moloko so far remains untouched. Nevertheless your made changes in Moloko are not going to be synchronized with the RTM server and are replaced by the server version, if newer.\n\nYou can change this by removing your RTM account from the device and create a new one with \'Read, Write and Delete\' permission.</string>
   <string name="btn_ok">OK</string>
   <string name="btn_continue">Continue</string>
   <string name="btn_cancel">Cancel</string>
   <string name="btn_new_account">New account</string>
   <string name="btn_account_settings">Account</string>
   <string name="btn_edit">Edit</string>
   <string name="btn_done">Done</string>
   <string name="btn_complete">Complete</string>
   <string name="btn_uncomplete">Incomplete</string>
   <string name="btn_postpone">Postpone</string>
   <string name="btn_delete">Delete</string>
   <string name="btn_add">Add</string>
   <string name="btn_back">Back</string>
   <string name="btn_discard">Discard</string>
   <string name="menu_opt_search_task_title">Search for tasks</string>
   <string name="dlg_estimate_picker_title">How long does it take?</string>
   <string name="dlg_due_picker_title">Set Due</string>
   <string name="dlg_due_picker_no_time">---</string>
   <string name="dlg_recurr_picker_title">Set Recurrence</string>
   <string name="dlg_recurr_picker_every">Every</string>
   <string name="dlg_recurr_picker_after">After</string>
      <string name="toast_insert_task">Adding new task...</string>
      <string name="toast_insert_task_ok">New task added</string>
      <string name="toast_insert_task_fail">Failed to add new task</string>
      <string name="toast_save_task">Saving task changes...</string>
      <string name="toast_save_task_ok">Changes to the task have been saved</string>
      <string name="toast_save_task_failed">Failed to save task changes</string>
      <string name="toast_delete_task">Deleting task...</string>
      <string name="toast_delete_task_ok">Task has been deleted</string>
      <string name="toast_delete_task_failed">Failed to delete the task</string>
      <string name="toast_insert_note">Adding new note...</string>
      <string name="toast_insert_note_ok">New task added</string>
      <string name="toast_insert_note_fail">Failed to add new task</string>
      <string name="toast_save_note">Saving note changes...</string>
      <string name="toast_save_note_ok">Changes to the note have been saved</string>
      <string name="toast_save_note_failed">Failed to save note changes</string>
      <string name="toast_delete_note">Deleting note...</string>
      <string name="toast_delete_note_ok">Note has been deleted</string>
      <string name="toast_delete_note_failed">Failed to delete the note</string>
      <string name="toast_insert_list">Adding new list...</string>
      <string name="toast_insert_list_ok">New list added</string>
      <string name="toast_insert_list_fail">Failed to add new list</string>
      <string name="toast_save_list">Saving list changes...</string>
      <string name="toast_save_list_ok">Changes to the list have been saved</string>
      <string name="toast_save_list_failed">Failed to save list changes</string>
      <string name="toast_delete_list">Deleting list...</string>
      <string name="toast_delete_list_ok">List has been deleted</string>
      <string name="toast_delete_list_failed">Failed to delete the list</string>
   <string name="change_tags_edit_hint">Comma separated tags</string>
   <string name="change_tags_empty">This task has no tags</string>
     <string name="abstaskslist_menu_opt_sort">Sort by</string>
   <string name="auth_permission_label">Permission</string>
</resources>