<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@id/menu_sort"
        android:title="@string/abstaskslist_menu_opt_sort"
        android:icon="@drawable/ic_menu_sort"
        android:menuCategory="container"
        android:showAsAction="ifRoom"
        android:actionViewClass="dev.drsoran.moloko.widgets.ActionBarMenuItemView">

        <menu>
            <group
                android:id="@id/menu_group_sort"
                android:checkableBehavior="single">
                <item
                    android:id="@id/menu_sort_priority"
                    android:title="@string/app_sort_prio" />
                <item
                    android:id="@id/menu_sort_due"
                    android:title="@string/app_sort_due_date" />
                <item
                    android:id="@id/menu_sort_task_name"
                    android:title="@string/app_sort_alpha" />
            </group>
        </menu>
    </item>
</menu>
