<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@id/menu_sort"
        android:title="@string/abstaskslist_menu_opt_sort"
        android:icon="@drawable/ic_menu_sort"
        android:menuCategory="container"
        android:showAsAction="ifRoom"
        android:actionViewClass="dev.drsoran.moloko.widgets.ActionBarMenuItemView">
    </item>
    <item
        android:id="@id/menu_sync"
        android:title="@string/phr_sync"
        android:icon="@drawable/ic_menu_refresh"
        android:menuCategory="secondary"        
        android:showAsAction="always"
        android:actionViewClass="dev.drsoran.moloko.widgets.ActionBarMenuItemView">
    </item>
    <item
        android:id="@id/menu_settings"
        android:title="@string/phr_settings"
        android:icon="@drawable/ic_menu_settings"
        android:menuCategory="secondary"
        android:showAsAction="never">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="activities.MolokoPreferencesActivity.class">
        </intent>
    </item>
</menu>
