<?xml version="1.0" encoding="utf-8" ?>
<!-- Copyright (c) 2010 Ronny Röhricht This file is part of Moloko. Moloko is free 
   software: you can redistribute it and/or modify it under the terms of the GNU General 
   Public License as published by the Free Software Foundation, either version 3 of 
   the License, or (at your option) any later version. Moloko is distributed in the 
   hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty 
   of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public 
   License for more details. You should have received a copy of the GNU General Public 
   License along with Moloko. If not, see <http://www.gnu.org/licenses/>. Contributors: 
   Ronny Röhricht - implementation -->

<LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:moloko="http://schemas.android.com/apk/res/dev.drsoran.moloko"
   android:orientation="vertical"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent">

   <ScrollView
      android:layout_width="fill_parent"
      android:layout_height="0dip"
      android:layout_weight="1">

      <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:paddingTop="13dip"
         android:paddingBottom="13dip"
         android:paddingLeft="20dip"
         android:paddingRight="20dip">

         <TextView
            android:id="@+id/auth_textview_permission"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold"
            android:singleLine="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dip"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/auth_permission_label" />

         <LinearLayout
            android:id="@+id/auth_spin_container"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/auth_textview_permission"
            android:layout_alignLeft="@id/auth_textview_permission"
            android:orientation="horizontal">

            <Spinner
               android:id="@+id/auth_spin_permission"
               android:layout_width="0dip"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:entries="@array/rtm_permissions" />

            <ImageButton
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:src="@drawable/ic_prefs_info"
               android:onClick="onPermissionInfo" />
         </LinearLayout>

         <TextView
            android:id="@+id/auth_text_message"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:layout_below="@id/auth_spin_container"
            android:layout_alignLeft="@id/auth_spin_container" />
      </RelativeLayout>
   </ScrollView>

   <dev.drsoran.moloko.layouts.BottomButtonBarLayout
      android:layout_width="fill_parent"
      android:layout_height="70dip"
      android:layout_gravity="bottom"
      moloko:button1Text="@string/btn_cancel"
      moloko:button1OnClick="onCancel"
      moloko:button2Text="@string/btn_continue"
      moloko:button2OnClick="onAuthenticate" />

</LinearLayout>
